# regexml

./: .gitignore  COPYRIGHT  CREDITS.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
regexml/: CHANGELOG.md  Cargo.toml  MAINTENANCE.md  PORT_NOTES.md  README.md
regexml-convert-perl-tests/: CHANGELOG.md  Cargo.toml  README.md
regexml-convert-perl-tests/src/: main.rs  perl-tests.xml
regexml-ucd-blocks/: CHANGELOG.md  Cargo.toml  README.md
regexml-ucd-blocks/src/: CompatBlocks.txt  main.rs
regexml/src/: analyze_string.rs  block.rs  category.rs  character_class.rs  history.rs  lib.rs  op_atom.rs  op_back_reference.rs  op_bol.rs  op_capture.rs  op_character_class.rs  op_choice.rs  op_end_program.rs  op_eol.rs  op_greedy_fixed.rs  op_nothing.rs  op_reluctant_fixed.rs  op_repeat.rs  op_sequence.rs  op_unambiguous_repeat.rs  operation.rs  re_compiler.rs  re_flags.rs  re_matcher.rs  re_program.rs  regex.rs  regex_iterator.rs  regular_expression.rs
regexml/src/snapshots/: regexml__re_compiler__tests__compile_a_star.snap  regexml__re_compiler__tests__compile_combined.snap
regexml/tests/: characters.txt  test_backtrack.rs  test_problems.rs  test_qt_analyze_string.rs  test_qt_matches.rs  test_qt_matches_re.rs  test_qt_perl_matches.rs  test_qt_replace.rs  test_qt_tokenize.rs  test_regexml.rs
src/: block.rs  case_variants.rs  category.rs  character_class.rs  lib.rs  op_atom.rs  op_back_reference.rs  op_bol.rs  op_capture.rs  op_character_class.rs  op_choice.rs  op_end_program.rs  op_eol.rs  op_greedy_fixed.rs  op_nothing.rs  op_reluctant_fixed.rs  op_repeat.rs  op_sequence.rs  op_unambiguous_repeat.rs  operation.rs  re_compiler.rs  re_flags.rs  re_matcher.rs  re_program.rs  regex_iterator.rs
src/charclass/: character_class.rs  mod.rs
src/snapshots/: regexml__re_compiler__tests__compile_a_star.snap  regexml__re_compiler__tests__simple_compile.snap
tests/: matches.xml  test_qt_matches.rs  test_regexml.rs
