[package]
name = "regexml"
version = "0.1.0"
edition = "2021"
authors = ["Regexml contributors"]
license = "Apache-2.0"

[dependencies]
ahash = "0.8.3"
enum_dispatch = "0.3.12"
icu_casemap = "1.4.0"
icu_collections = "1.4.0"
icu_properties = "1.4.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }
